--- a/static/css/_mainGame.scss
+++ b/static/css/_mainGame.scss
@@ -12,6 +12,7 @@
     font-size: 2vw;
     display: flex;
     position: absolute;
+    display: flex;
     width: 6vw;
     height: 6vw;
     background-color: orange;
