--- a/static/css/style.css
+++ b/static/css/style.css
@@ -355,6 +355,7 @@ svg * {
   font-size: 2vw;
   display: flex;
   position: absolute;
+  display: flex;
   width: 6vw;
   height: 6vw;
   background-color: orange;
