--- a/static/css/mainPageStyle/mainStyle.css
+++ b/static/css/mainPageStyle/mainStyle.css
@@ -1,18 +1,584 @@
-/* Error: expected "{".
- *   ,
- * 6 |     margin- bottom: 1%;
- *   |                       ^
- *   '
- *   ..\_header.scss 6:23  @import
- *   mainStyle.scss 6:9    root stylesheet */
-
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-  display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: 'Error: expected "{".\a   \2577 \a 6 \2502      margin- bottom: 1%;\d\a   \2502                        ^\a   \2575 \a   ..\\_header.scss 6:23  @import\a   mainStyle.scss 6:9    root stylesheet';
+@charset "UTF-8";
+/**
+  Нормализация блочной модели
+ */
+*,
+::before,
+::after {
+  box-sizing: border-box;
 }
+
+/**
+  Убираем внутренние отступы слева тегам списков,
+  у которых есть атрибут class
+ */
+:where(ul, ol):where([class]) {
+  padding-left: 0;
+}
+
+/**
+  Убираем внешние отступы body и двум другим тегам,
+  у которых есть атрибут class
+ */
+body,
+:where(blockquote, figure):where([class]) {
+  margin: 0;
+}
+
+/**
+  Убираем внешние отступы вертикали нужным тегам,
+  у которых есть атрибут class
+ */
+:where(h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul,
+ol,
+dl) {
+  margin-block: 0;
+}
+
+:where(dd[class]) {
+  margin-left: 0;
+}
+
+:where(fieldset[class]) {
+  margin-left: 0;
+  padding: 0;
+  border: none;
+}
+
+/**
+  Убираем стандартный маркер маркированному списку,
+  у которого есть атрибут class
+ */
+:where(ul[class]) {
+  list-style: none;
+}
+
+:where(address[class]) {
+  font-style: normal;
+}
+
+/**
+  Обнуляем вертикальные внешние отступы параграфа,
+  объявляем локальную переменную для внешнего отступа вниз,
+  чтобы избежать взаимодействие с более сложным селектором
+ */
+p {
+  --paragraphMarginBottom: 24px;
+  margin-block: 0;
+}
+
+/**
+  Внешний отступ вниз для параграфа без атрибута class,
+  который расположен не последним среди своих соседних элементов
+ */
+p:where(:not([class]):not(:last-child)) {
+  margin-bottom: var(--paragraphMarginBottom);
+}
+
+/**
+  Упрощаем работу с изображениями
+ */
+img {
+  display: block;
+  max-width: 100%;
+}
+
+/**
+  Наследуем свойства шрифт для полей ввода
+ */
+input,
+textarea,
+select,
+button {
+  font: inherit;
+  padding: 0;
+}
+
+html {
+  /**
+    Пригодится в большинстве ситуаций
+    (когда, например, нужно будет "прижать" футер к низу сайта)
+   */
+  height: 100%;
+}
+
+/**
+  Плавный скролл
+ */
+html,
+:has(:target) {
+  scroll-behavior: smooth;
+}
+
+body {
+  /**
+    Пригодится в большинстве ситуаций
+    (когда, например, нужно будет "прижать" футер к низу сайта)
+   */
+  min-height: 100%;
+  /**
+    Унифицированный интерлиньяж
+   */
+  line-height: 1.5;
+}
+
+/**
+  Приводим к единому цвету svg-элементы
+ */
+svg *[fill] {
+  fill: currentColor;
+}
+
+svg *[stroke] {
+  stroke: currentColor;
+}
+
+/**
+  Чиним баг задержки смены цвета при взаимодействии с svg-элементами
+ */
+svg * {
+  transition-property: fill, stroke;
+}
+
+/**
+  Удаляем все анимации и переходы для людей,
+  которые предпочитают их не использовать
+ */
+@media (prefers-reduced-motion: reduce) {
+  *,
+  ::before,
+  ::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
+}
+:root {
+  --background-color: #3B226B;
+  --background-color-alt: #250E53;
+  --background-color-el: #04003D;
+  --background-color-el-alt: #ffffff;
+}
+
+@font-face {
+  font-family: "Bebas Neue";
+  src: url("../../fonts/BebasNeue-Regular.woff2") format("woff2");
+  font-weight: 500;
+}
+.header {
+  grid-area: header;
+}
+.header-container {
+  margin-top: 1%;
+  margin-bottom: 1%;
+  border-radius: 1dvw;
+  font-size: 1dvw;
+  background-color: var(--background-color-el);
+}
+.header-inner {
+  padding: 1% 3%;
+  display: flex;
+  justify-content: space-between;
+}
+.header-inner__logo img {
+  width: 6vw;
+}
+
+.navigation {
+  display: flex;
+  align-items: center;
+}
+.navigation-menu {
+  display: flex;
+  column-gap: 4vw;
+}
+
+.main-logo {
+  grid-area: mainLogo;
+  display: flex;
+  background-color: var(--background-color-el);
+  border-radius: 1.5vw;
+  height: 8vw;
+  justify-content: center;
+  flex-direction: row;
+  align-items: center;
+  column-gap: 5vw;
+  padding: 1%;
+  margin-top: 1.5vw;
+}
+.main-logo__heading {
+  font-size: 4vw;
+}
+.main-logo__image {
+  width: 14vw;
+  object-fit: contain;
+}
+
+.info-block-container {
+  display: flex;
+  grid-area: infoBlock;
+  background-color: #fff;
+  margin-top: 2vw;
+  border-radius: 1vw;
+  height: 24vw;
+}
+
+.wrapper-suppliers {
+  width: 60%;
+}
+
+.suppliers {
+  display: grid;
+  grid-template-columns: 0.5fr 0.5fr 0.5fr 0.5fr;
+  grid-template-rows: 0.4fr 1fr 1fr 1fr 1fr;
+  grid-template-areas: "heading heading heading heading";
+  align-items: center;
+  justify-items: center;
+  height: 100%;
+}
+.suppliers__heading {
+  grid-area: heading;
+  color: var(--background-color-el);
+  font-size: 2vw;
+}
+.suppliers__image {
+  object-fit: contain;
+  height: 5vw;
+}
+
+.profile-and-date-container {
+  width: 40%;
+  background-color: #EEE;
+  border-radius: 1vw;
+  box-shadow: -1vw 1vw 1vw 0px rgba(0, 0, 0, 0.25);
+}
+
+.profile {
+  background-color: var(--background-color-el);
+  border-radius: 1vw;
+  height: 60%;
+  display: grid;
+  box-shadow: -1vw 1vw 1vw 0px rgba(0, 0, 0, 0.25);
+  grid-template-columns: 0.7fr 0.3fr;
+  grid-template-rows: auto 1fr;
+  grid-template-areas: "avatar toys" "progres progres";
+}
+.profile-avatar {
+  grid-area: avatar;
+  display: flex;
+  align-items: center;
+  padding-top: 5%;
+  padding-left: 5%;
+}
+.profile-avatar-image {
+  border: 0.2vw solid white;
+  border-radius: 50%;
+  width: 5vw;
+  height: 5vw;
+  background-size: cover;
+  background-image: url("../../icons/mainPageIcons/avatarPhoto.jpg");
+}
+.profile-avatar-fio {
+  font-size: 1vw;
+  margin-left: 5%;
+  font-weight: bold;
+}
+
+.toys-container {
+  display: flex;
+  grid-area: toys;
+  flex-direction: column;
+  align-items: center;
+  font-size: 1.3vw;
+}
+
+.toys-icon {
+  width: 2.5vw;
+  position: relative;
+}
+
+.complete-progress {
+  grid-area: progres;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.complete-progress-count {
+  font-size: 2vw;
+}
+.complete-progress-bar {
+  border-radius: 1vw;
+  height: 0.5vw;
+  width: 90%;
+  background-color: pink;
+  margin-top: 1vw;
+}
+
+.draw-date-container {
+  padding-top: 5%;
+  font-size: 1.5vw;
+  padding-left: 6%;
+  display: flex;
+  flex-direction: column;
+  color: #000;
+}
+
+.draw-date {
+  display: flex;
+  align-items: center;
+  column-gap: 7%;
+}
+.draw-date-checkbox {
+  display: flex;
+  background-color: #D9D9D9;
+  height: 2vw;
+  width: 2vw;
+  padding: 1%;
+}
+.draw-date-checkbox-icon {
+  object-fit: contain;
+}
+
+.main-game {
+  margin-top: 5%;
+  grid-area: mainGame;
+  position: relative;
+}
+.main-game-snake {
+  width: 100%;
+}
+.main-game-step {
+  font-size: 2vw;
+  display: flex;
+  position: absolute;
+  width: 6vw;
+  height: 6vw;
+  background-color: orange;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+}
+
+#step_1 {
+  top: 1.85vw;
+  left: 9.3vw;
+}
+
+#step_2 {
+  top: 1.85vw;
+  left: 20.9vw;
+}
+
+#step_3 {
+  top: 1.85vw;
+  left: 32.45vw;
+}
+
+#step_4 {
+  top: 1.85vw;
+  left: 44.05vw;
+}
+
+#step_5 {
+  top: 9.25vw;
+  left: 55.75vw;
+}
+
+#step_6 {
+  top: 16.7vw;
+  left: 44.05vw;
+}
+
+#step_7 {
+  top: 16.7vw;
+  left: 32.5vw;
+}
+
+#step_8 {
+  top: 16.7vw;
+  left: 20.9vw;
+}
+
+#step_9 {
+  top: 24.1vw;
+  left: 9.3vw;
+}
+
+#step_10 {
+  top: 31.5vw;
+  left: 20.9vw;
+}
+
+#step_11 {
+  top: 31.5vw;
+  left: 32.5vw;
+}
+
+#step_12 {
+  top: 31.5vw;
+  left: 44.05vw;
+}
+
+#step_13 {
+  top: 38.9vw;
+  left: 55.7vw;
+}
+
+#step_14 {
+  top: 46.3vw;
+  left: 44.05vw;
+}
+
+#step_15 {
+  top: 46.3vw;
+  left: 32.5vw;
+}
+
+#step_16 {
+  top: 46.3vw;
+  left: 20.9vw;
+}
+
+#step_17 {
+  top: 53.65vw;
+  left: 9.25vw;
+}
+
+#step_18 {
+  top: 61vw;
+  left: 20.9vw;
+}
+
+#step_19 {
+  top: 61vw;
+  left: 32.5vw;
+}
+
+#step_20 {
+  top: 61vw;
+  left: 44.05vw;
+}
+
+#step_21 {
+  top: 68.5vw;
+  left: 55.7vw;
+}
+
+#step_22 {
+  top: 75.9vw;
+  left: 44.05vw;
+}
+
+#step_23 {
+  top: 75.9vw;
+  left: 32.5vw;
+}
+
+#step_24 {
+  top: 75.9vw;
+  left: 20.9vw;
+}
+
+#step_25 {
+  top: 83.3vw;
+  left: 9.25vw;
+}
+
+#step_26 {
+  top: 90.7vw;
+  left: 20.9vw;
+}
+
+#step_27 {
+  top: 90.7vw;
+  left: 32.5vw;
+}
+
+#step_28 {
+  top: 90.7vw;
+  left: 44.05vw;
+}
+
+#step_29 {
+  top: 98.1vw;
+  left: 55.7vw;
+}
+
+#step_30 {
+  top: 105.5vw;
+  left: 44.05vw;
+}
+
+#step_31 {
+  top: 105.5vw;
+  left: 32.5vw;
+}
+
+#step_32 {
+  top: 105.5vw;
+  left: 20.9vw;
+}
+
+#step_33 {
+  top: 112.9vw;
+  left: 9.25vw;
+}
+
+#step_34 {
+  top: 120.3vw;
+  left: 20.9vw;
+}
+
+#step_35 {
+  top: 120.3vw;
+  left: 32.5vw;
+}
+
+#step_36 {
+  top: 120.3vw;
+  left: 44.05vw;
+}
+
+#step_37 {
+  top: 127.7vw;
+  left: 55.7vw;
+}
+
+#step_38 {
+  top: 135.1vw;
+  left: 44.05vw;
+}
+
+#step_39 {
+  top: 135.1vw;
+  left: 32.5vw;
+}
+
+#step_40 {
+  top: 135.1vw;
+  left: 20.9vw;
+}
+
+body {
+  background-color: var(--background-color);
+  font-family: Inter, sans-serif;
+  color: #fff;
+}
+
+.main {
+  display: grid;
+  grid-template-columns: 1fr 64.5161290323dvw 1fr;
+  grid-template-rows: auto auto auto 1fr;
+  grid-template-areas: ". header ." ". mainLogo ." ". infoBlock ." ". mainGame .";
+}
+
+/*# sourceMappingURL=mainStyle.css.map */
