--- a/static/css/conditionsPageStyle/_mainPrizes.scss
+++ b/static/css/conditionsPageStyle/_mainPrizes.scss
@@ -4,6 +4,7 @@
   border-radius: 1vw;
   margin-top: 1vw;
   padding-bottom: 1vw;
+  height: 43vw;
 }
 
 .main-prizes-heading-container {
@@ -37,6 +38,7 @@
 .main-prizes-icon-container {
   display: flex;
   align-items: flex-end;
+  padding-left: 2.5vw;
 
   .icon-wrapper {
     display: flex;
