--- a/static/css/conditionsPageStyle/conditionsMainStyle.css
+++ b/static/css/conditionsPageStyle/conditionsMainStyle.css
@@ -183,6 +183,11 @@ svg * {
   font-size: 1dvw;
   background-color: var(--background-color-el);
 }
+@media (max-width: 767px) {
+  .header-container {
+    font-size: 2vw;
+  }
+}
 .header-inner {
   padding: 1% 3%;
   display: flex;
@@ -190,6 +195,11 @@ svg * {
 }
 .header-inner__logo img {
   width: 6vw;
+}
+@media (max-width: 767px) {
+  .header-inner__logo img {
+    width: 10vw;
+  }
 }
 
 .navigation {
@@ -248,6 +258,7 @@ svg * {
   border-radius: 1vw;
   margin-top: 1vw;
   padding-bottom: 1vw;
+  height: 43vw;
 }
 
 .main-prizes-heading-container {
@@ -276,6 +287,7 @@ svg * {
 .main-prizes-icon-container {
   display: flex;
   align-items: flex-end;
+  padding-left: 2.5vw;
 }
 .main-prizes-icon-container .icon-wrapper {
   display: flex;
@@ -305,10 +317,35 @@ svg * {
   border-radius: 1vw;
   grid-area: weekPrizes;
   margin-top: 1vw;
+  padding-bottom: 2vw;
+  height: 44vw;
 }
 
 .week-prizes-heading-container {
   display: flex;
+}
+
+.week-prizes-snake-icon {
+  width: 13vw;
+  object-fit: contain;
+}
+
+.week-prizes-text-container {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 3vw 4vw;
+  width: 73%;
+}
+
+.week-prizes-heading {
+  font-size: 3vw;
+}
+
+.week-prizes-text {
+  font-size: 1.2vw;
+  padding: 0 7vw;
 }
 
 .week-prizes-icon-container {
@@ -324,6 +361,13 @@ svg * {
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
+  font-size: 1vw;
+}
+
+.week-prize-text {
+  margin-top: 1.5vw;
+  padding: 0 5vw;
 }
 
 .week-grill-prize-container {
@@ -344,6 +388,26 @@ svg * {
 
 .week-biggrill-prize-container {
   grid-area: biggrill;
+}
+
+.week-grill-prize-container img {
+  height: 10vw;
+}
+
+.week-aerogrill-prize-container img {
+  height: 10vw;
+}
+
+.week-yandex-prize-container img {
+  height: 8vw;
+}
+
+.week-robot-prize-container img {
+  height: 8vw;
+}
+
+.week-biggrill-prize-container img {
+  height: 24vw;
 }
 
 body {
