--- a/static/css/mainPageStyle/_mainLogo.scss
+++ b/static/css/mainPageStyle/_mainLogo.scss
@@ -11,13 +11,24 @@
   padding: 1%;
   margin-top: 1.5vw;
 
+  @include mobile {
+    height: 12vw;
+  }
 
   &__heading {
     font-size: 4vw;
+
+    @include mobile {
+      font-size: 6vw;
+    }
   }
 
   &__image {
     width: 14vw;
     object-fit: contain;
+
+    @include mobile {
+      width: 20vw;
+    }
   }
 }
