--- a/static/css/mainPageStyle/_suppliersPreview.scss
+++ b/static/css/mainPageStyle/_suppliersPreview.scss
@@ -5,6 +5,11 @@
   margin-top: 2vw;
   border-radius: 1vw;
   height: 24vw;
+
+  @include mobile {
+    height: 32vw;
+  }
+
 }
 
 .wrapper-suppliers {
@@ -24,10 +29,18 @@
     grid-area: heading;
     color: var(--background-color-el);
     font-size: 2vw;
+
+    @include mobile {
+      font-size: 2.5vw;
+    }
   }
 
   &__image {
     object-fit: contain;
     height: 5vw;
+
+    @include mobile {
+      height: 7vw;
+    }
   }
 }
