--- a/static/css/mainPageStyle/mainStyle.css
+++ b/static/css/mainPageStyle/mainStyle.css
@@ -183,6 +183,11 @@ svg * {
   font-size: 1dvw;
   background-color: var(--background-color-el);
 }
+@media (max-width: 767px) {
+  .header-container {
+    font-size: 2vw;
+  }
+}
 .header-inner {
   padding: 1% 3%;
   display: flex;
@@ -190,6 +195,11 @@ svg * {
 }
 .header-inner__logo img {
   width: 6vw;
+}
+@media (max-width: 767px) {
+  .header-inner__logo img {
+    width: 10vw;
+  }
 }
 
 .navigation {
@@ -214,12 +224,27 @@ svg * {
   padding: 1%;
   margin-top: 1.5vw;
 }
+@media (max-width: 767px) {
+  .main-logo {
+    height: 12vw;
+  }
+}
 .main-logo__heading {
   font-size: 4vw;
+}
+@media (max-width: 767px) {
+  .main-logo__heading {
+    font-size: 6vw;
+  }
 }
 .main-logo__image {
   width: 14vw;
   object-fit: contain;
+}
+@media (max-width: 767px) {
+  .main-logo__image {
+    width: 20vw;
+  }
 }
 
 .info-block-container {
@@ -229,6 +254,11 @@ svg * {
   margin-top: 2vw;
   border-radius: 1vw;
   height: 24vw;
+}
+@media (max-width: 767px) {
+  .info-block-container {
+    height: 32vw;
+  }
 }
 
 .wrapper-suppliers {
@@ -249,9 +279,19 @@ svg * {
   color: var(--background-color-el);
   font-size: 2vw;
 }
+@media (max-width: 767px) {
+  .suppliers__heading {
+    font-size: 2.5vw;
+  }
+}
 .suppliers__image {
   object-fit: contain;
   height: 5vw;
+}
+@media (max-width: 767px) {
+  .suppliers__image {
+    height: 7vw;
+  }
 }
 
 .profile-and-date-container {
@@ -579,6 +619,14 @@ body {
   grid-template-columns: 1fr 64.5161290323dvw 1fr;
   grid-template-rows: auto auto auto 1fr;
   grid-template-areas: ". header ." ". mainLogo ." ". infoBlock ." ". mainGame .";
+}
+
+@media (max-width: 700px) {
+  .main {
+    justify-content: center;
+    grid-template-columns: 95vw;
+    grid-template-areas: "header" "mainLogo" "infoBlock" "mainGame";
+  }
 }
 
 /*# sourceMappingURL=mainStyle.css.map */
