--- a/static/css/_header.scss
+++ b/static/css/_header.scss
@@ -1,28 +1,30 @@
 .header {
   grid-area: header;
+  font-family: Inter, sans-serif;
 
   &-container {
     margin-top: 1%;
-    margin-bottom: 1%;
     border-radius: 1dvw;
-    font-size: 1dvw;
+    font-size: 2dvw;
     background-color: var(--background-color-el);
 
     @include mobile {
-      font-size: 2.5vw;
+      font-size: 3.5vw;
+      border-radius: 2vw;
     }
 
   }
   &-inner {
     padding: 1% 3%;
     display: flex;
-    justify-content: space-between;
 
     &__logo img {
-      width: 6vw;
+      width: 10vw;
+      margin-top: 2%;
 
       @include mobile {
         width: 20vw;
+        margin: 0
       }
     }
   }
@@ -31,6 +33,8 @@
 .navigation {
   display: flex;
   align-items: center;
+  width: 100%;
+  justify-content: space-around;
 
   &-menu {
     display: flex;
