--- a/static/css/conditionsPageStyle/_mainPrizes.scss
+++ b/static/css/conditionsPageStyle/_mainPrizes.scss
@@ -2,9 +2,12 @@
   grid-area: mainPrizes;
   background-color: var(--background-color-alt);
   border-radius: 1vw;
-  margin-top: 1vw;
   padding-bottom: 1vw;
-  height: 43vw;
+  height: 40vw;
+
+  @include mobile {
+    height: 60vw;
+  }
 }
 
 .main-prizes-heading-container {
@@ -14,22 +17,35 @@
     margin-top: 2vw;
     width: 21vw;
     object-fit: contain;
+
+    @include mobile {
+      width: 32vw;
+    }
   }
 
   .main-prizes-text-container {
-    margin-top: 3vw;
+    margin-top: 2vw;
     display: flex;
     flex-direction: column;
     text-align: center;
 
     .main-prizes-heading {
-      font-family: "Bebas Neue", sans-serif;
-      font-size: 3vw;
+      font-size: 4vw;
+
+      @include mobile {
+        font-size: 5vw;
+      }
     }
 
     .main-prizes-text {
-      font-family: "Bebas Neue", sans-serif;
       font-size: 1.5vw;
+      font-family: Inter, sans-serif;
+      padding: 0 5vw;
+      line-height: 1.25;
+
+      @include mobile {
+        font-size: 2.5vw;
+      }
     }
   }
 
@@ -45,16 +61,23 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    font-size: 1.5vw;
   }
 
   .main-prizes-icon-text {
     margin-top: 2vw;
+    font-family: Inter, sans-serif;
+    font-size: 1vw;
+    padding: 0 5.5vw;
+    line-height: 1.25;
+
+    @include mobile {
+      font-size: 2vw;
+    }
   }
 
-  .main-prizes-tvIcon { width: 26vw; object-fit: contain; }
-  .main-prizes-playIcon { width: 17vw; object-fit: contain; }
-  .main-prizes-holodilnikIcon { width: 13vw; object-fit: contain; }
+  .main-prizes-tvIcon { width: 26vw; object-fit: contain; @include mobile {width: 34vw;}}
+  .main-prizes-playIcon { width: 17vw; object-fit: contain; @include mobile {width: 29vw;}}
+  .main-prizes-holodilnikIcon { width: 13vw; object-fit: contain; @include mobile {width: 20vw;}}
 }
 
 
