--- a/static/css/utils/_fonts.scss
+++ b/static/css/utils/_fonts.scss
@@ -1,5 +1,5 @@
 @font-face {
   font-family: "Bebas Neue";
-  src: url("../../fonts/BebasNeue-Regular.woff2") format("woff2");
-  font-weight: 500;
+  src: url("../../fonts/Bebas Neue.ttf");
+  font-weight: 400;
 }
