--- a/static/css/prizesPageStyle/prizesMainStyle.scss
+++ b/static/css/prizesPageStyle/prizesMainStyle.scss
@@ -18,7 +18,7 @@ body {
   color: #fff;
 }
 
-.main-conditions-wrapper {
+.main-prizes-wrapper {
   display: grid;
   grid-template-columns: 1fr calc(100dvw/1.55) 1fr;
   grid-template-rows: auto auto auto auto auto auto auto 1fr;
