--- a/static/css/stageTwoStyle/mainStyleStageTwo.scss
+++ b/static/css/stageTwoStyle/mainStyleStageTwo.scss
@@ -1,13 +1,14 @@
 @import "../utils/zero",
-        "../utils/variables",
-        "../utils/media",
-        "../utils/fonts";
+"../utils/media",
+"../utils/variables",
+"../utils/fonts";
 
 @import "../header",
         "../mainPageStyle/mainLogo",
         "../mainPageStyle/suppliersPreview",
         "../mainPageStyle/profileAndDateInfo",
         "../mainPageStyle/mainGame",
+        "mainGameStageTwo",
         "../footer";
 
 body {
@@ -16,10 +17,10 @@ body {
   color: #fff;
 }
 
-.main-page-wrapper {
+.main-stage-two-wrapper {
   display: grid;
   grid-template-columns: 1fr calc(100dvw/1.55) 1fr;
-  grid-template-rows: auto auto auto 1fr;
+  //grid-template-rows: auto auto auto auto 1fr;
   grid-template-areas:
     ". header ."
     ". mainLogo ."
@@ -39,5 +40,3 @@ body {
     row-gap: 2vw;
   }
 }
-
-
