--- a/static/css/utils/_fonts.scss
+++ b/static/css/utils/_fonts.scss
@@ -3,3 +3,9 @@
   src: url("../../fonts/Bebas Neue.ttf");
   font-weight: 400;
 }
+
+@font-face {
+  font-family: "Inter";
+  src: url("../../fonts/Inter-VariableFont_opsz,wght.ttf");
+  font-weight: 400;
+}
