--- a/static/css/utils/_zero.scss
+++ b/static/css/utils/_zero.scss
@@ -7,6 +7,11 @@
   box-sizing: border-box;
 }
 
+
+a {
+  color: currentColor;
+  text-decoration: none;
+}
 /**
   Убираем внутренние отступы слева тегам списков,
   у которых есть атрибут class
