Готовый вариант второй этапа с адаптивом Добавил блок с кнопками авторизации
01.11

--- a/static/css/_footer.scss
+++ b/static/css/_footer.scss
@@ -14,4 +14,11 @@
     left: 37.5vw;
     position: absolute;
   }
+
+  &-elka-stage-two {
+    width: 40vw;
+    top: -16vw;
+    left: 27.5vw;
+    position: absolute;
+  }
 }
