--- a/static/css/mainPageStyle/mainStyle.css
+++ b/static/css/mainPageStyle/mainStyle.css
@@ -104,6 +104,7 @@ select,
 button {
   font: inherit;
   padding: 0;
+  color: currentColor;
 }
 
 html {
@@ -319,7 +320,7 @@ svg * {
   background-color: var(--background-color-el);
   border-radius: 1vw;
   height: 60%;
-  display: grid;
+  display: none;
   box-shadow: -1vw 1vw 1vw 0px rgba(0, 0, 0, 0.25);
   grid-template-columns: 0.7fr 0.3fr;
   grid-template-rows: auto 1fr;
@@ -415,6 +416,53 @@ svg * {
 @media (max-width: 900px) {
   .complete-progress-bar {
     height: 0.5vw;
+  }
+}
+
+.profile-authorization {
+  background-color: var(--background-color-el);
+  border-radius: 1vw;
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  row-gap: 1vw;
+}
+@media (max-width: 900px) {
+  .profile-authorization {
+    height: 60%;
+    row-gap: 1.5vw;
+  }
+}
+
+.profile-registration__button {
+  height: 3vw;
+  width: 15vw;
+  background-color: #FF4A15;
+  border-radius: 3vw;
+  font-size: 1.5vw;
+}
+@media (max-width: 900px) {
+  .profile-registration__button {
+    height: 4.5vw;
+    width: 25vw;
+    font-size: 2.5vw;
+  }
+}
+
+.profile-entrance__button {
+  background-color: #D92446;
+  border-radius: 3vw;
+  font-size: 1.5vw;
+  height: 3vw;
+  width: 15vw;
+}
+@media (max-width: 900px) {
+  .profile-entrance__button {
+    height: 4.5vw;
+    width: 25vw;
+    font-size: 2.5vw;
   }
 }
 
@@ -861,6 +909,12 @@ svg * {
   width: 25vw;
   top: -15vw;
   left: 37.5vw;
+  position: absolute;
+}
+.footer-elka-stage-two {
+  width: 40vw;
+  top: -16vw;
+  left: 27.5vw;
   position: absolute;
 }
 
