--- a/static/css/stageTwoStyle/mainStyleStageTwo.scss
+++ b/static/css/stageTwoStyle/mainStyleStageTwo.scss
@@ -20,7 +20,7 @@ body {
 .main-stage-two-wrapper {
   display: grid;
   grid-template-columns: 1fr calc(100dvw/1.55) 1fr;
-  //grid-template-rows: auto auto auto auto 1fr;
+  grid-template-rows: auto auto auto auto 1fr;
   grid-template-areas:
     ". header ."
     ". mainLogo ."
@@ -40,3 +40,5 @@ body {
     row-gap: 2vw;
   }
 }
+
+
