--- a/static/css/prizesPageStyle/prizesMainStyle.scss
+++ b/static/css/prizesPageStyle/prizesMainStyle.scss
@@ -10,6 +10,7 @@
         "prizesInAll",
         "firstFinalists",
         "fromSuppliers",
+        "../shared/soundSwitch",
         "../footer";
 
 body {
