--- a/static/css/stageTwoStyle/mainStyleStageTwo.scss
+++ b/static/css/stageTwoStyle/mainStyleStageTwo.scss
@@ -9,6 +9,7 @@
         "../mainPageStyle/profileAndDateInfo",
         "../mainPageStyle/mainGame",
         "mainGameStageTwo",
+        "../shared/soundSwitch",
         "../footer";
 
 body {
