--- a/static/css/mainPageStyle/_mainGame.scss
+++ b/static/css/mainPageStyle/_mainGame.scss
@@ -34,7 +34,7 @@
 #step_7 { top: 16.7vw; left: 32.5vw; }
 #step_8 { top: 16.7vw; left: 20.9vw; }
 #step_9 { top: 24.1vw; left: 9.3vw; }
-#step_10 { top: 31.5vw; left: 20.9vw; }
+#step_10 {background-image: url("../../images/mainPageImages/treasureStepImage.png"); background-size: contain; cursor: pointer; top: 31.5vw; left: 20.9vw; }
 #step_11 { top: 31.5vw; left: 32.5vw; }
 #step_12 { top: 31.5vw; left: 44.05vw; }
 #step_13 { top: 38.9vw; left: 55.7vw; }
@@ -44,7 +44,7 @@
 #step_17 { top: 53.65vw; left: 9.25vw; }
 #step_18 { top: 61vw; left: 20.9vw; }
 #step_19 { top: 61vw; left: 32.5vw; }
-#step_20 { top: 61vw; left: 44.05vw; }
+#step_20 {background-image: url("../../images/mainPageImages/krestikiNolikImage.png"); background-size: contain; background-color: cornflowerblue; cursor: pointer; top: 61vw; left: 44.05vw; }
 #step_21 { top: 68.5vw; left: 55.7vw; }
 #step_22 { top: 75.9vw; left: 44.05vw;}
 #step_23 { top: 75.9vw; left: 32.5vw;}
@@ -54,7 +54,7 @@
 #step_27 { top: 90.7vw; left: 32.5vw;}
 #step_28 { top: 90.7vw; left: 44.05vw;}
 #step_29 { top: 98.1vw; left: 55.7vw;}
-#step_30 { top: 105.5vw; left: 44.05vw;}
+#step_30 { top: 105.5vw; left: 44.05vw; cursor: pointer;}
 #step_31 { top: 105.5vw; left: 32.5vw;}
 #step_32 { top: 105.5vw; left: 20.9vw;}
 #step_33 { top: 112.9vw; left: 9.25vw;}
