--- a/static/css/stageTwoStyle/mainStyleStageTwo.css
+++ b/static/css/stageTwoStyle/mainStyleStageTwo.css
@@ -907,442 +907,205 @@ svg * {
     left: 30.66vw;
   }
 }
-.footer {
-  grid-area: footer;
-  height: 20vw;
-  background-color: var(--background-color-alt);
-  position: relative;
+.main-game-step-stage-two {
+  font-size: 2vw;
+  display: flex;
+  position: absolute;
+  width: 5.75vw;
+  height: 5.75vw;
+  background-color: #00A093;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
 }
 @media (max-width: 900px) {
-  .footer {
-    width: 100vw; /* Задаем ширину футера 100vw */
+  .main-game-step-stage-two {
+    width: 8.5vw;
+    height: 8.5vw;
+    font-size: 3vw;
   }
 }
-.footer-elka {
-  width: 25vw;
-  top: -15vw;
-  left: 37.5vw;
-  position: absolute;
-}
-.footer-elka-stage-two {
-  width: 40vw;
-  top: -16vw;
-  left: 27.5vw;
-  position: absolute;
+
+#step_41 {
+  top: 1.87vw;
+  left: 8.37vw;
 }
 
-.treasure-game-wrapper {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 1000;
+#step_42 {
+  top: 1.87vw;
+  left: 19.4vw;
 }
 
-.treasure-game-container {
-  background-color: var(--background-color);
-  width: 40vw;
-  height: 25vw;
-  border-radius: 1vw;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+#step_43 {
+  top: 1.87vw;
+  left: 30.45vw;
 }
 
-.treasure-game-heading {
-  display: flex;
-  align-items: center;
-  position: relative;
-  padding-top: 1vw;
-}
-.treasure-game-heading-text {
-  font-size: 2vw;
-  font-family: "Akshar", sans-serif;
-  font-weight: 600;
-}
-.treasure-game-heading-cross {
-  width: 2vw;
-  height: 2vw;
-  position: absolute;
-  cursor: pointer;
-  right: -10vw;
+#step_44 {
+  top: 1.87vw;
+  left: 41.45vw;
 }
 
-.treasure-game-chest-container {
-  display: flex;
-  column-gap: 3vw;
-  align-items: flex-end;
-  margin-bottom: 8vw;
-  height: 60%;
-}
-.treasure-game-chest-container .treasure-game-chest {
-  width: 8vw;
-  cursor: pointer;
-  object-fit: contain;
+#step_45 {
+  top: 8.9vw;
+  left: 52.5vw;
 }
 
-.tic-tac-game-wrapper {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 1000;
+#step_46 {
+  top: 15.95vw;
+  left: 41.45vw;
 }
 
-.tic-tac-game-container {
-  background-color: var(--background-color);
-  width: 35vw;
-  height: 27vw;
-  border-radius: 1vw;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+#step_47 {
+  top: 15.95vw;
+  left: 30.45vw;
 }
 
-.tic-tac-game-heading {
-  display: flex;
-  align-items: center;
-  position: relative;
-  padding-top: 1vw;
-}
-.tic-tac-game-heading-text {
-  font-size: 2vw;
-  font-family: "Akshar", sans-serif;
-  font-weight: 600;
-}
-.tic-tac-game-heading-cross {
-  width: 2vw;
-  height: 2vw;
-  position: absolute;
-  cursor: pointer;
-  right: -8vw;
+#step_48 {
+  top: 15.95vw;
+  left: 19.4vw;
 }
 
-.tic-tac-game {
-  margin-top: 2vw;
+#step_49 {
+  top: 22.95vw;
+  left: 8.35vw;
 }
 
-.tic-tac-board {
-  width: 18vw;
-  height: 18vw;
-  border-radius: 2vw;
-  background-color: #1A0543;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.tic-tac-board .tic-tac-cell {
-  width: 5.5vw;
-  height: 5.5vw;
-  background-color: #fff;
-  border-radius: 1.25vw;
-  border: 0.01vw solid #1A0543;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+#step_50 {
+  top: 30.05vw;
+  left: 19.45vw;
 }
 
-.puzzle-game-wrapper {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 1000;
+#step_51 {
+  top: 30.05vw;
+  left: 30.45vw;
 }
 
-.puzzle-game-container {
-  background-color: var(--background-color);
-  width: 35vw;
-  height: 27vw;
-  border-radius: 1vw;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+#step_52 {
+  top: 30.05vw;
+  left: 41.45vw;
 }
 
-.puzzle-game-heading {
-  display: flex;
-  align-items: center;
-  position: relative;
-  padding-top: 1vw;
-}
-.puzzle-game-heading-text {
-  font-size: 2vw;
-  font-family: "Akshar", sans-serif;
-  font-weight: 600;
-}
-.puzzle-game-heading-cross {
-  width: 2vw;
-  height: 2vw;
-  position: absolute;
-  cursor: pointer;
-  right: -13vw;
+#step_53 {
+  top: 37.05vw;
+  left: 52.5vw;
 }
 
-.puzzle-game {
-  margin-top: 2vw;
+#step_54 {
+  top: 44.1vw;
+  left: 41.45vw;
 }
 
-.puzzle-board {
-  width: 18vw;
-  height: 18vw;
-  border-radius: 2vw;
-  background-color: #1A0543;
-  display: grid;
-  grid-template-columns: repeat(3, 5vw);
-  grid-template-rows: repeat(3, 5vw);
-  gap: 0.1vw;
-  justify-content: center;
-  align-content: center;
+#step_55 {
+  top: 44.1vw;
+  left: 30.45vw;
 }
 
-.puzzle-piece {
-  width: 5vw;
-  height: 5vw;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #007bff;
-  cursor: pointer;
-  background-size: contain;
+#step_56 {
+  top: 44.1vw;
+  left: 19.45vw;
 }
 
-.empty {
-  background-color: transparent;
+#step_57 {
+  top: 51.15vw;
+  left: 8.35vw;
 }
 
-.casik-game-wrapper {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 1000;
+#step_58 {
+  top: 58.2vw;
+  left: 19.45vw;
 }
 
-.casik-game-container {
-  background-color: var(--background-color);
-  width: 35vw;
-  height: 30vw;
-  border-radius: 1vw;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+#step_59 {
+  top: 58.2vw;
+  left: 30.45vw;
 }
 
-.casik-game-heading {
-  display: flex;
-  align-items: center;
-  position: relative;
-  padding-top: 1vw;
-}
-.casik-game-heading-text {
-  font-size: 2vw;
-  font-family: "Akshar", sans-serif;
-  font-weight: 600;
-}
-.casik-game-heading-cross {
-  width: 2vw;
-  height: 2vw;
-  position: absolute;
-  cursor: pointer;
-  right: -13vw;
+#step_60 {
+  top: 58.2vw;
+  left: 41.45vw;
 }
 
-.casik-game {
-  height: 80%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-}
-
-.deal-wheel {
-  /* задаём переменные блока */
-  /* размеры колеса */
-  --size: clamp(250px, 80vmin, 700px);
-  /* настройки яркости и заливки фона секторов */
-  --lg-hs: 0 3%;
-  --lg-stop: 50%;
-  --lg: linear-gradient(
-                  hsl(var(--lg-hs) 0%) 0 var(--lg-stop),
-                  hsl(var(--lg-hs) 20%) var(--lg-stop) 100%
-  );
-  /* добавляем позиционирование относительно других элементов */
-  position: relative;
-  /* подключаем сетку */
-  display: grid;
-  grid-gap: calc(var(--size) / 20);
-  /* выравниваем содержимое блока по центру */
-  align-items: center;
-  /* задаём имена областей внутри сетки */
-  grid-template-areas: "spinner" "trigger";
-  /* устанавливаем размер шрифта */
-  font-size: calc(var(--size) / 21);
-}
-
-/* всё, что относится ко внутренним элементам главного блока, будет находиться в области сетки с названием spinner */
-.deal-wheel > * {
-  grid-area: spinner;
-}
-
-/* сам блок и кнопка будут находиться в области сетки с названием trigger и будут выровнены по центру */
-.deal-wheel .btn-spin {
-  grid-area: trigger;
-  justify-self: center;
-}
-
-/* сектор колеса */
-.spinner {
-  /* добавляем относительное позиционирование */
-  position: relative;
-  /* подключаем сетку */
-  display: grid;
-  /* выравниваем всё по центру */
-  align-items: center;
-  /* добавляем элемент в сетку */
-  grid-template-areas: "spinner";
-  /* устанавливаем размеры */
-  width: var(--size);
-  height: var(--size);
-  /* поворачиваем элемент  */
-  transform: rotate(calc(var(--rotate, 25) * 1deg));
-  /* рисуем круглую обводку, а всё, что не поместится, — будет скрыто за кругом */
-  border-radius: 50%;
-}
-
-/* всё, что внутри этого блока, будет находиться в области сетки с названием spinner */
-.spinner * {
-  grid-area: spinner;
-}
-
-/* текст на секторах */
-.prize {
-  /* включаем «гибкую» вёрстку */
-  display: flex;
-  align-items: center;
-  /* задаём отступы от краёв блока */
-  padding: 0 calc(var(--size) / 6) 0 calc(var(--size) / 20);
-  /* устанавливаем размеры */
-  width: 50%;
-  height: 50%;
-  /* устанавливаем координаты, относительно которых будем вращать текст */
-  transform-origin: center right;
-  /* поворачиваем текст */
-  transform: rotate(var(--rotate));
-  /* запрещаем пользователю выделять мышкой текст на секторах */
-  user-select: none;
-}
-
-/* язычок */
-.ticker {
-  /* добавляем относительное позиционирование */
-  position: relative;
-  /* устанавливаем размеры */
-  left: calc(var(--size) / -15);
-  width: calc(var(--size) / 10);
-  height: calc(var(--size) / 20);
-  /* фон язычка */
-  background: var(--lg);
-  /* делаем так, чтобы язычок был выше колеса */
-  z-index: 1;
-  /* форма язычка */
-  clip-path: polygon(20% 0, 100% 50%, 20% 100%, 0% 50%);
-  /* устанавливаем точку, относительно которой будет вращаться язычок при движении колеса */
-  transform-origin: center left;
-}
-
-/* кнопка запуска колеса */
-.btn-spin {
-  color: white;
-  background: black;
-  border: none;
-  /* берём размер шрифта такой же, как в колесе */
-  font-size: inherit;
-  /* добавляем отступы от текста внутри кнопки */
-  padding: 0.9rem 2rem 1rem;
-  /* скругляем углы */
-  border-radius: 0.5rem;
-  /* меняем внешний вид курсора над кнопкой на руку*/
-  cursor: pointer;
-}
-
-/* если кнопка нажата и неактивна */
-.btn-spin:disabled {
-  /* меняем внешний вид курсора */
-  cursor: progress;
-  /* делаем кнопку полупрозрачной */
-  opacity: 0.25;
-}
-
-/* анимация вращения */
-.is-spinning .spinner {
-  transition: transform 8s cubic-bezier(0.1, -0.01, 0, 1);
-}
-
-/* анимация движения язычка */
-.is-spinning .ticker {
-  animation: tick 700ms cubic-bezier(0.34, 1.56, 0.64, 1);
-}
-
-/* эффект, когда колесо задевает язычок при вращении */
-@keyframes tick {
-  40% {
-    /* чуть поворачиваем язычок наверх в середине анимации */
-    transform: rotate(-12deg);
+@media (max-width: 900px) {
+  #step_41 {
+    top: 2.7vw;
+    left: 12.3vw;
   }
-}
-/* анимируем выпавший сектор */
-.prize.selected .text {
-  /* делаем текст белым */
-  color: white;
-  /* настраиваем длительность анимации */
-  animation: selected 800ms ease;
-}
-
-/* настраиваем анимацию текста на выпавшем секторе по кадрам */
-@keyframes selected {
-  /* что происходит на 25% от начала анимации */
-  25% {
-    /* увеличиваем текст в 1,25 раза */
-    transform: scale(1.25);
-    /* добавляем тексту тень */
-    text-shadow: 1vmin 1vmin 0 hsla(0, 0%, 0%, 0.1);
+  #step_42 {
+    top: 2.65vw;
+    left: 28.55vw;
   }
-  40% {
-    transform: scale(0.92);
-    text-shadow: 0 0 0 hsla(0, 0%, 0%, 0.2);
+  #step_43 {
+    top: 2.65vw;
+    left: 44.8vw;
   }
-  60% {
-    transform: scale(1.02);
-    text-shadow: 0.5vmin 0.5vmin 0 hsla(0, 0%, 0%, 0.1);
+  #step_44 {
+    top: 2.65vw;
+    left: 61vw;
   }
-  75% {
-    transform: scale(0.98);
+  #step_45 {
+    top: 13vw;
+    left: 77.3vw;
   }
-  85% {
-    transform: scale(1);
+  #step_46 {
+    top: 23.4vw;
+    left: 61vw;
+  }
+  #step_47 {
+    top: 23.4vw;
+    left: 44.8vw;
+  }
+  #step_48 {
+    top: 23.4vw;
+    left: 28.55vw;
+  }
+  #step_49 {
+    top: 33.7vw;
+    left: 12.25vw;
+  }
+  #step_50 {
+    top: 44.1vw;
+    left: 28.55vw;
+  }
+  #step_51 {
+    top: 44.1vw;
+    left: 44.8vw;
+  }
+  #step_52 {
+    top: 44.1vw;
+    left: 61vw;
+  }
+  #step_53 {
+    top: 54.5vw;
+    left: 77.3vw;
+  }
+  #step_54 {
+    top: 64.9vw;
+    left: 61vw;
+  }
+  #step_55 {
+    top: 64.9vw;
+    left: 44.8vw;
+  }
+  #step_56 {
+    top: 64.9vw;
+    left: 28.55vw;
+  }
+  #step_57 {
+    top: 75.3vw;
+    left: 12.3vw;
+  }
+  #step_58 {
+    top: 85.6vw;
+    left: 28.55vw;
+  }
+  #step_59 {
+    top: 85.6vw;
+    left: 44.8vw;
+  }
+  #step_60 {
+    top: 85.6vw;
+    left: 61vw;
   }
 }
 .sound-switch {
@@ -1369,21 +1132,45 @@ svg * {
   width: 50%;
 }
 
+.footer {
+  grid-area: footer;
+  height: 20vw;
+  background-color: var(--background-color-alt);
+  position: relative;
+}
+@media (max-width: 900px) {
+  .footer {
+    width: 100vw; /* Задаем ширину футера 100vw */
+  }
+}
+.footer-elka {
+  width: 25vw;
+  top: -15vw;
+  left: 37.5vw;
+  position: absolute;
+}
+.footer-elka-stage-two {
+  width: 40vw;
+  top: -16vw;
+  left: 27.5vw;
+  position: absolute;
+}
+
 body {
   background-color: var(--background-color);
   font-family: "Inter", sans-serif;
   color: #fff;
 }
 
-.main-page-wrapper {
+.main-stage-two-wrapper {
   display: grid;
   grid-template-columns: 1fr 64.5161290323dvw 1fr;
-  grid-template-rows: auto auto auto 1fr;
+  grid-template-rows: auto auto auto auto 1fr;
   grid-template-areas: ". header ." ". mainLogo ." ". infoBlock ." ". mainGame ." "footer footer footer";
   row-gap: 1.5vw;
 }
 @media (max-width: 900px) {
-  .main-page-wrapper {
+  .main-stage-two-wrapper {
     justify-content: center;
     grid-template-columns: 95vw;
     grid-template-areas: "header" "mainLogo" "infoBlock" "mainGame";
@@ -1391,4 +1178,4 @@ body {
   }
 }
 
-/*# sourceMappingURL=mainStyle.css.map */
+/*# sourceMappingURL=mainStyleStageTwo.css.map */
