--- a/static/css/utils/_fonts.scss
+++ b/static/css/utils/_fonts.scss
@@ -9,3 +9,9 @@
   src: url("../../fonts/Inter-VariableFont_opsz,wght.ttf");
   font-weight: 400;
 }
+
+@font-face {
+  font-family: "Akshar";
+  src: url("../../fonts/Akshar-Regular.ttf");
+  font-weight: 400;
+}
